--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.3.6
   dio: ^5.1.2
+  multiple_result: ^4.0.0
 
 dev_dependencies:
   flutter_test:
