--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   dio: ^5.1.2
   multiple_result: ^4.0.0
+  mocktail: ^0.3.0
 
 dev_dependencies:
   flutter_test:
